# bevy-game-server-experimental

./: README.md
server/: Cargo.toml  README.md
server/src/: character.rs  main.rs  socket.rs
server/src/auth/: auth.rs  auth_provider.rs  auth_server.rs  mod.rs
server/src/socket/: mod.rs  packets.rs  socket_server.rs
web/: .editorconfig  .gitignore  README.md  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs
web/src/: index.css
web/src/lib/: socket.ts
web/src/routes/: +layout.svelte  +page.svelte
